PIC-4279: Implement the processing of hearings with multiple cases. Work in progress